# MCP-Mikrotik-Server

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANUAL.md  QUICKSTART_PYTHON.md  README.md  README_PYTHON.md  TROUBLESHOOTING.md  devices.json.example  install-python.bat  install-python.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_command.py  setup.py  uninstall.bat  uninstall.sh
.claude/: settings.local.json
.github/workflows/: test.yml
mikrotik_mcp/: __init__.py  audit.py  cache.py  compatibility.py  device_manager.py  exceptions.py  logger.py  models.py  retry.py  server.py
mikrotik_mcp/connections/: __init__.py  api_connection.py  base.py  factory.py  ssh_connection.py  telnet_connection.py
mikrotik_mcp/modules/: __init__.py  dhcp.py  firewall.py  profiles.py  vpn.py
profiles/network/: corporate-office.yaml
profiles/security/: high-security.yaml
profiles/vpn/: remote-access-l2tp.yaml
profiles/wireless/: guest-wifi.yaml
tests/: README.md  __init__.py  conftest.py  test_device_manager.py  test_firewall_manager.py  test_profile_manager.py
tests/integration/: test_full_workflow.py
tests/mocks/: __init__.py  mock_connection.py  mock_device.py
